--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,17 @@
-image: alpine:latest
+# Use root/example as user/password credentials
+version: '3.1'
 
-deploy1:
-  stage: deploy
-  script:
-    - cat ansible.txt
-  tags:
-    - dev2ops
+services:
+
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
