--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-# Use root/example as user/password credentials
-version: '3.1'
-
 services:
 
   db:
@@ -8,10 +5,22 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      MYSQL_ROOT_PASSWORD: wPrP80
+      
+  variables:
+    # Configure mysql environment variables (https://hub.docker.com/_/mysql/)
+    Host: mysql
+    User: admin_user
+    Password: P#q3dJ/4
+    Database: wordpress
+  tags:
+    - dev2ops
+      
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - 80:8080
+  tags:
+    dev2ops
