--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ services:
   - db
   - adminer
 
-db:
+database:
   image: mysql
   command: --default-authentication-plugin=mysql_native_password
   restart: always
