--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,10 @@
 services:
+  - mysql:latest
 
-  db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: wPrP80
-      MYSQL_USER: admin_user
-      MYSQL_PASSWORD: P#q3dJ/4
-      
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+variables:
+  MYSQL_ROOT_PASSWORD: wPrP80
+  MYSQL_USER: admin_user
+  MYSQL_PASSWORD: P#q3dJ/4
+  
   tags:
     - dev2ops
