--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: mysql:5.7
-  
+  environment:
+      MYSQL_ROOT_PASSWORD: wPrP80
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: admin_user
+      MYSQL_PASSWORD: P#q3dJ/4
+
 deploy:
   stage: deploy
   script:
