--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-image: mysql:5.7
-  environment:
-      MYSQL_ROOT_PASSWORD: wPrP80
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: admin_user
-      MYSQL_PASSWORD: P#q3dJ/4
+services: mysql:5.7
+environment:
+  MYSQL_ROOT_PASSWORD: wPrP80
+  MYSQL_DATABASE: wordpress
+  MYSQL_USER: admin_user
+  MYSQL_PASSWORD: P#q3dJ/4
 
 deploy:
   stage: deploy
