--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,23 @@
-services: "mysql:5.7"
-variables:
-  MYSQL_ROOT_PASSWORD: "wPrP80"
-  MYSQL_DATABASE: "wordpress"
-  MYSQL_USER: "admin_user"
-  MYSQL_PASSWORD: "P#q3dJ/4"
+# Use root/example as user/password credentials
+version: '3.1'
+
+services:
+
+  db:
+    image: mysql:5.7
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+        MYSQL_ROOT_PASSWORD: wPrP80
+        MYSQL_DATABASE: wordpress
+        MYSQL_USER: admin_user"
+        MYSQL_PASSWORD: P#q3dJ/4
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:80
 
 deploy:
   stage: deploy
