--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ services:
     environment:
         MYSQL_ROOT_PASSWORD: wPrP80
         MYSQL_DATABASE: wordpress
-        MYSQL_USER: admin_user"
+        MYSQL_USER: admin_user
         MYSQL_PASSWORD: P#q3dJ/4
 
   adminer:
