--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,16 +2,16 @@
 # version: '3.1'
 
 services:
+  - mysql:latest
 
-  db:
-    image: mysql:5.7
-    #command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-        MYSQL_ROOT_PASSWORD: wPrP80
-        MYSQL_DATABASE: wordpress
-        MYSQL_USER: admin_user
-        MYSQL_PASSWORD: P#q3dJ/4
+variables:
+  command: --default-authentication-plugin=mysql_native_password
+  restart: always
+  environment:
+    MYSQL_ROOT_PASSWORD: wPrP80
+    MYSQL_DATABASE: wordpress
+    MYSQL_USER: admin_user
+    MYSQL_PASSWORD: P#q3dJ/4
 
   adminer:
     image: adminer
