--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,10 @@ services:
   - mysql:latest
 
 variables:
-  command: --default-authentication-plugin=mysql_native_password
-  restart: always
-  environment:
-    MYSQL_ROOT_PASSWORD: wPrP80
-    MYSQL_DATABASE: wordpress
-    MYSQL_USER: admin_user
-    MYSQL_PASSWORD: P#q3dJ/4
+    MYSQL_ROOT_PASSWORD: "wPrP80"
+    MYSQL_DATABASE: "wordpress"
+    MYSQL_USER: "admin_user"
+    MYSQL_PASSWORD: "P#q3dJ/4"
 
   adminer:
     image: adminer
